apps/server/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repo-template-server-node-port
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: repo-template-server
