apps/server/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repo-template-server-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: repo-template-managed-cert
spec:
  defaultBackend:
    service:
      name: repo-template-server-node-port
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: repo-template-server
                port:
                  number: 80
